--- a/Apps/Sandcastle/gallery/strategy_countries.html
+++ b/Apps/Sandcastle/gallery/strategy_countries.html
@@ -41,6 +41,12 @@
           terrainProvider: Cesium.createWorldTerrain(),
         });
 
+        var scene = viewer.scene;
+        scene.skyAtmosphere.show = false;
+        scene.fog.enabled = false;
+        scene.globe.showGroundAtmosphere = false;
+
+
         const imageryLayer = viewer.imageryLayers.addImageryProvider(
           new Cesium.IonImageryProvider({ assetId: 1252160 })
         );
